--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-SimplePagination",
+  "name": "ng-simplePagination",
   "main": "./simplePagination.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "angular",
     "pagination",
