Add 'npm test' command and karma-cli'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "license": "MIT",
   "devDependencies": {
     "karma": "^0.12.19",
+    "karma-cli": "0.0.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4"
+  },
+  "scripts": {
+    "test": "karma start"
   }
 }
